finished image controller
